# Mlabs-SOD

./: .env.example  .gitignore  Dockerfile  TODO.md  docker-compose.yml  fly.toml  package-lock.json  package.json
.github/workflows/: worker-deploy.yml
docs/plans/: 2026-03-03-e2e-testing-loop-design.md  2026-03-03-e2e-testing-loop-plan.md  2026-03-03-pipeline-redesign-plan.md  2026-03-03-pipeline-redesign.md  2026-03-05-email-testing-implementation.md  2026-03-05-email-testing-integration-design.md
src/: config.ts  index.ts  seed.ts  types.ts
src/cloud-run/: launcher.ts
src/db/: client.ts  queries.ts  schema.sql
src/queue/: processor.ts
src/routes/: dashboard.ts  status.ts  webhook.ts
src/webhook/: notifier.ts
templates/saas-starter/: .env.example  .replit  Dockerfile  index.html  package.json  replit.nix  (+3 more)
worker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
worker/src/: config.py  github_auth.py  main.py  prd_parser.py  repo.py  status.py
worker/src/orchestrator/: component_loader.py  context.py  evaluator.py  llm_judge.py  progress.py  runner.py  tech_detector.py  verifier.py
worker/src/pipeline/: agent.py  assessor.py  builder.py  deployer.py  e2e_loop.py  email.py  finalizer.py  models.py  planner.py  reviewer.py  scaffolder.py  seeder.py  template.py  tester.py
worker/src/prompts/: assessment.py  deploy.py  evaluation.py  implementation.py  planning.py  review.py  system.py  testing.py
worker/tests/: test_deploy_checkpoint.py  test_email.py  test_llm_judge.py  test_progress_deploy.py  test_tester.py  test_verifier.py
(+13 files in other folders)
