[project]
name = "prd-worker"
version = "1.0.0"
description = "Ephemeral Cloud Run Job worker that turns PRDs into software using Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.5",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.scripts]
worker = "src.main:run"
